# mygeotab-python

./: .coveragerc  .gitignore  .pylintrc  .pyup.yml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  PR.md  Pipfile  README.rst  circle.yml  dev-requirements.txt  justfile  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  pythonpackage.yml
docs/: Makefile  altitude.rst  api.rst  commandline.rst  conf.py  ext.rst  index.rst  make.bat  requirements.txt  usage.rst
examples/basic/: sample.py
examples/data_feed/: README.rst  feeder.py  requirements.txt
examples/notebooks/: Visualizing MyGeotab Data with Python.ipynb
mygeotab/: __init__.py  api.py  api.pyi  api_async.py  cli.py  dates.py  dates.pyi  exceptions.py  exceptions.pyi  ext.py  helpers.py  http.py  parameters.py  serializers.py  serializers.pyi  utils.py
mygeotab/altitude/: __init__.py  daas_definition.py  wrapper.py
mygeotab/async/: __init__.py  api.py
mygeotab/ext/: __init__.py  async.py  entityList.py  entitylist.py  feed.py
mygeotab/py3/: api_async.py
tests/: test_altitude.py  test_api.py  test_api_async.py  test_api_call.py  test_api_entitylist.py  test_api_live.py  test_api_performance.py  test_api_thread.py  test_daas_definition.py  test_dates.py  test_ext_api.py  test_helpers.py  test_http.py  test_parameters.py  test_serializers.py  test_utils.py
tests/test_api_performance/: dsls.json
