[tool.poetry]
name = "mygeotab"
version = "0.0.0"
description = "A Python client for the MyGeotab API"
authors = ["Aaron Toth"]
license = "Apache-2.0"
homepage = "https://github.com/geotab/mygeotab-python"
repository = "https://github.com/geotab/mygeotab-python"
documentation = "https://mygeotab-python.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries"
]
keywords = [
    "telematics",
    "geotab",
    "mygeotab",
    "truck",
    "gps"
]
include = [
    "README.rst",
    "CHANGELOG.rst"
]
packages = [
    { include = "mygeotab" }
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/geotab/mygeotab-python/issues"

[tool.poetry.dependencies]
python = "^3.6.1"
httpx = {version = "^1.0.0b0", extras = ["http2", "brotli"], allow-prereleases = true}
click = "^7.1"
pytz = ">=2018.9"
arrow = "^1.0"
python-rapidjson = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
pytest-flake8 = "^1.0.7"
pytest-mypy = "^0.8.0"
pytest-asyncio = "^0.14.0"
pytest-black = "^0.3.12"
pytest-dotenv = "^0.5.2"
pandas = "^1.1.0"
poetry-dynamic-versioning = "^0.12.2"
build = "^0.1.0"
mypy = "^0.910"
types-pytz = "^2021.1.2"

[tool.poetry.scripts]
myg = "mygeotab.cli:main"

[tool.black]
line-length = 120
target_version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest]
testpaths = "tests"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
bump = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
