[project]
name = "mygeotab"
dynamic = ["version"]
description = "A Python client for the MyGeotab SDK"
readme = "README.rst"
license = "Apache-2.0"
authors = [{ name = "Geotab Inc." }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "aiohttp[speedups]>=3.12.2,<4",
    "arrow>=1.4.0,<2",
    "click>=8.0.0,<9",
    "python-rapidjson>=1.20,<2",
    "pytz>=2024.1",
]

[project.optional-dependencies]
notebook = ["pandas"]

[project.scripts]
myg = "mygeotab.cli:main"

[project.urls]
Homepage = "https://github.com/geotab/mygeotab-python"
Repository = "https://github.com/geotab/mygeotab-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "mygeotab/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["mygeotab"]

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.2.0",
    "pytest-cov>=7.0.0",
    "pytest-datadir>=1.8.0",
    "requests-mock>=1.12.0",
    "ruff>=0.15.0",
    "types-pytz>=2025.2.0",
    "types-setuptools>=82.0.0",
]

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B"]
exclude = ["docs"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["mygeotab"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
