[metadata]
name = mygeotab
description = A Python client for the MyGeotab API
long_description = file: README.rst, CHANGELOG.rst
url = https://github.com/geotab/mygeotab-python
author = Aaron Toth
license = Apache 2.0
license_file = LICENSE
classifiers = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
project_urls =
    Documentation = https://mygeotab-python.readthedocs.io
    Source = https://github.com/geotab/mygeotab-python
    Tracker = https://github.com/geotab/mygeotab-python

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    httpx[http2,brotli]
    click
    pytz
    arrow
    python-rapidjson
    importlib_metadata
python_requires = >=3.6
setup_requires =
    setuptools_scm
    setuptools_scm_git_archive

[options.packages.find]
exclude =
    examples*
	tests*
	docs

[options.package_data]
* = LICENSE

[options.entry_points]
console_scripts =
    myg = mygeotab.cli:main

[options.extras_require]
notebook =
    pandas

[bdist_wheel]
universal = 1

[flake8]
ignore = E402
max-line-length = 120
exclude =
    tests,
    docs,
    .egg,
    .egg-info,
    .eggs,
    dist,
    build,
max-complexity = 10 